# py-ref-app

./: .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
ref_app/: app.py
src/ref_app/: app.py  mod1.py
