[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reference_app"
description = "This is a simple reference Python application using pyproject.toml."
classifiers = ["Private :: Do Not Upload"]
version = "0.0.1"
dependencies = [
    "requests==2.28.1"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.distutils.bdist_wheel]
universal = true
